# textspeechcovert

./: github_key  github_key.pub  run.sh
client/: config.js  next.config.js  package-lock.json  package.json  run.sh  wronglist.md
client/app/: globals.css  layout.js  page.js
client/app/login/: login.module.css  page.jsx
client/app/signup/: page.jsx  signup.module.css
client/app/utils/: auth.jsx
client/context/: AuthContext.jsx  Context.jsx  RunningContext.jsx
server/: db.sqlite3  manage.py  pyproject.toml  run.sh
server/TextSpeechConversion/: asgi.py  settings.py  urls.py  wsgi.py
server/authentication/: models.py  views.py
server/authentication/migrations/: 0001_initial.py  0002_delete_plf_functionrole.py  0003_initial.py
server/main/: admin.py  models.py  serializers.py  views.py
server/main/migrations/: 0001_initial.py  0002_alter_phrase_content.py  0003_comparisonresult.py  0004_recommend.py  0005_paragraph_link_alter_recommend_link.py  0006_paragraph_link_id_recommend_link_id.py
server/media/uploads/: blob  blob_03JPzmI  blob_04TFJLK  blob_04jlK4Z  blob_07b52II  blob_0GxrWua  blob_0Kd9fRj  blob_0MSynzB  blob_0ThfG1c  blob_0UPKubZ  blob_0dScdcC  blob_0dtAoaD  blob_0fwUZH9  blob_0gsFoTY  blob_0nZPNdr  blob_0r2n0RP  blob_0tilCtO  blob_0tnxAze  blob_0yCxdr6  blob_13LfwVR  blob_1HKsSsF  blob_1L0Z11n  blob_1LkQRJ8  blob_1MGW6jj  blob_1VTMYVA  blob_1WJysvK  blob_1d3Uj2f  blob_1kIyTA7  blob_1pLqBjh  blob_1tmzYrw  blob_1vboc9P  blob_1xzQb3I  blob_21AK88W  blob_23BdRfD  blob_28YKxTU  blob_2Bkk4Ry  blob_2FXhgks  blob_2Jv9RBg  blob_2PuKbjt  blob_2QepQBS  (+1041 more)
(+14 files in other folders)
