[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.26.5"
django-cors-headers = "^4.3.1"
gtts = "^2.4.0"
spacy = "^3.7.2"
djoser = "^2.2.2"
openai = "^1.6.1"
ffmpeg-python = "^0.2.0"
pydub = "^0.25.1"
soundstretch = "^1.2"
uwsgi = "^2.0.23"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
social-auth-app-django = "^5.4.0"
youtube-dl = "^2021.12.17"
pytube = "^15.0.0"
pyjwt = "^2.8.0"
dj-rest-auth = "^5.0.2"
django-allauth = "^0.60.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
